refactor: OOP light headers

--- a/GRAPHIX Machine Project.vcxproj
+++ b/GRAPHIX Machine Project.vcxproj
@@ -140,6 +140,9 @@
     <ClInclude Include="Classes\Cameras\MyCamera.h" />
     <ClInclude Include="Classes\Cameras\OrthoCamera.h" />
     <ClInclude Include="Classes\Cameras\PerspectiveCamera.h" />
+    <ClInclude Include="Classes\Light\DirectionalLight.h" />
+    <ClInclude Include="Classes\Light\Light.h" />
+    <ClInclude Include="Classes\Light\PointLight.h" />
     <ClInclude Include="Classes\Models\MainModel.h" />
     <ClInclude Include="Classes\Models\Model3D.h" />
     <ClInclude Include="Classes\Models\Shader.h" />
