--- a/GRAPHIX Machine Project.vcxproj.filters
+++ b/GRAPHIX Machine Project.vcxproj.filters
@@ -47,6 +47,15 @@
     <ClInclude Include="Classes\Cameras\OrthoCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Classes\Light\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Light\DirectionalLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Light\PointLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="Shaders\bird.frag" />
