--- a/GRAPHIX Machine Project.vcxproj.filters
+++ b/GRAPHIX Machine Project.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="Classes\Light\PointLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Classes\Models\Skybox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="Shaders\bird.frag" />
@@ -66,5 +69,7 @@
     <None Include="Shaders\sample.vert" />
     <None Include="Shaders\sphere.frag" />
     <None Include="Shaders\sphere.vert" />
+    <None Include="..\..\GRAPHIX\Quiz03-Chua_JohnVincent\Src\Shaders\skybox.frag" />
+    <None Include="..\..\GRAPHIX\Quiz03-Chua_JohnVincent\Src\Shaders\skybox.vert" />
   </ItemGroup>
 </Project>
