--- a/GRAPHIX Machine Project.vcxproj
+++ b/GRAPHIX Machine Project.vcxproj
@@ -142,7 +142,7 @@
     <ClInclude Include="Classes\Cameras\PerspectiveCamera.h" />
     <ClInclude Include="Classes\Light\DirectionalLight.h" />
     <ClInclude Include="Classes\Light\Light.h" />
-    <ClInclude Include="Classes\Light\PointLight.h" />
+    <ClInclude Include="Classes\Light\SpotLight.h" />
     <ClInclude Include="Classes\Models\MainModel.h" />
     <ClInclude Include="Classes\Models\Model3D.h" />
     <ClInclude Include="Classes\Models\Shader.h" />
@@ -169,8 +169,6 @@
   <ItemGroup>
     <None Include="..\..\GRAPHIX\Quiz03-Chua_JohnVincent\Src\Shaders\skybox.frag" />
     <None Include="..\..\GRAPHIX\Quiz03-Chua_JohnVincent\Src\Shaders\skybox.vert" />
-    <None Include="Shaders\sample.frag" />
-    <None Include="Shaders\sample.vert" />
     <None Include="Shaders\sphere.frag" />
     <None Include="Shaders\sphere.vert" />
   </ItemGroup>
