--- a/GRAPHIX Machine Project.vcxproj.filters
+++ b/GRAPHIX Machine Project.vcxproj.filters
@@ -53,7 +53,7 @@
     <ClInclude Include="Classes\Light\DirectionalLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Classes\Light\PointLight.h">
+    <ClInclude Include="Classes\Light\SpotLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Classes\Models\Skybox.h">
@@ -65,8 +65,6 @@
     <CopyFileToFolders Include="Shaders\bird.vert" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\sample.frag" />
-    <None Include="Shaders\sample.vert" />
     <None Include="Shaders\sphere.frag" />
     <None Include="Shaders\sphere.vert" />
     <None Include="..\..\GRAPHIX\Quiz03-Chua_JohnVincent\Src\Shaders\skybox.frag" />
