--- a/GRAPHIX Machine Project.vcxproj
+++ b/GRAPHIX Machine Project.vcxproj
@@ -143,8 +143,7 @@
     <ClInclude Include="Classes\Light\DirectionalLight.h" />
     <ClInclude Include="Classes\Light\Light.h" />
     <ClInclude Include="Classes\Light\SpotLight.h" />
-    <ClInclude Include="Classes\Models\MainModel.h" />
-    <ClInclude Include="Classes\Models\Model3D.h" />
+    <ClInclude Include="Classes\Models\Model.h" />
     <ClInclude Include="Classes\Models\Shader.h" />
     <ClInclude Include="Classes\Models\Skybox.h" />
     <ClInclude Include="stb_image.h" />
