--- a/GRAPHIX Machine Project.vcxproj
+++ b/GRAPHIX Machine Project.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Classes\Light\DirectionalLight.h" />
     <ClInclude Include="Classes\Light\Light.h" />
     <ClInclude Include="Classes\Light\SpotLight.h" />
+    <ClInclude Include="Classes\Models\Environment.h" />
     <ClInclude Include="Classes\Models\Model.h" />
     <ClInclude Include="Classes\Models\Model3D.h" />
     <ClInclude Include="Classes\Models\Player.h" />
